first commit adding arbor app starters

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link href="https://cdn.jsdelivr.net/npm/@mdi/font@4.x/css/materialdesignicons.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
-  <title>Terra Analytics</title>
+  <title>Arbor</title>
 </head>
 
 <body>
@@ -14,7 +14,7 @@
     <v-app>
 
       <v-app-bar app>
-        Terra Analytics
+        Arbor: Analytics Over the Tree of Life
       </v-app-bar>
 
       <v-main>
@@ -54,6 +54,30 @@
               description: 'Provide a day-by-day exploration of trait values across all cultivars',
               url: '/trait_explorer',
               image: '/static/trait_explorer.png',
+            },
+            {
+              name: 'Fit Continuous Variable Traits',
+              description: 'Luke to provide a pithy saying here',
+              url: '/fit_continuous',
+              image: '/static/fitContinuous_app.png',
+            },
+            {
+              name: 'Fit Discrete Variable Traits',
+              description: 'Luke to provide another pithy saying',
+              url: '/fit_discrete',
+              image: '/static/fitDiscrete_app.png',
+            },
+            {
+              name: 'Phylosignal',
+              description: 'Search for Phylosignal given a tree and a matrix',
+              url: '/phylosignal',
+              image: '/static/phylosignal_app.png',
+            },
+            {
+              name: 'Ancestral State Reconstruction',
+              description: 'SExplore the ancestral signal of a particular trait across the tree',
+              url: '/asr',
+              image: '/static/asr.png',
             },
           ],
         };
