FitContinuous spec edited, PIC app container added

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
   <script src="https://cdn.jsdelivr.net/npm/vue@2.x/dist/vue.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.20/lodash.min.js"></script>
-  
-  
+
+
   <script>
 
     new Vue({
@@ -81,6 +81,12 @@
               description: 'SExplore the ancestral signal of a particular trait across the tree',
               url: '/asr',
               image: '/static/asr.png',
+            },
+            {
+              name: 'PIC',
+              description: 'Phylogenetic Independent Contrasts',
+              url: '/pic',
+              image: '/static/pic_app.png',
             },
           ],
         };
