--- a/phylosignal/index.html
+++ b/phylosignal/index.html
@@ -101,7 +101,7 @@
             Running (Job Status {{ job.status }}) ...
           </div>
 
-  	  <v-card v-if="this.selectedModel === 'Lambda'" class="mb-4 ml-4 mr-4">
+  	  <v-card v-if="this.selectedModel === 'Lambda' && result.length > 0" class="mb-4 ml-4 mr-4">
   	    <v-card-text>
   		<b>Log-Likelihood (Lambda fixed at 0):</b>
   		<br></br>
@@ -110,7 +110,7 @@
   		Here, lambda is fixed at 0 (meaning every species is statistically independent of every other species). This number represents the log-likelihood of lambda being 0.
   	    </v-card-text>
   	  </v-card>
-  	  <v-card v-if="this.selectedModel === 'Lambda'" class="mb-4 ml-4 mr-4">
+  	  <v-card v-if="this.selectedModel === 'Lambda' && result.length > 0" class="mb-4 ml-4 mr-4">
   	    <v-card-text>
   		<b>Log-Likelihood (Lambda Estimated):</b>
   		<br></br>
@@ -119,7 +119,7 @@
   		This result is similar to the one above, except that lambda is estimated and not fixed at 0.
   	    </v-card-text>
   	  </v-card>
-  	  <v-card v-if="this.selectedModel === 'Lambda'" class="mb-4 ml-4 mr-4">
+  	  <v-card v-if="this.selectedModel === 'Lambda' && result.length > 0" class="mb-4 ml-4 mr-4">
   	    <v-card-text>
   		<b>Chi-Squared Test Statistic:</b>
   		<br></br>
@@ -128,7 +128,7 @@
   		This result is the test statistic obtained when a chi-square test is performed to compare the provided data to the expected chi-square distribution.
   	    </v-card-text>
   	  </v-card>
-  	  <v-card v-if="this.selectedModel === 'Lambda'" class="mb-4 ml-4 mr-4">
+  	  <v-card v-if="this.selectedModel === 'Lambda' && result.length > 0" class="mb-4 ml-4 mr-4">
   	    <v-card-text>
   		<b>Chi-Square P Value:</b>
   		<br></br>
@@ -137,7 +137,7 @@
   		This is the p value obtained from the chi-square test described above.
   	    </v-card-text>
   	  </v-card>
-  	  <v-card v-if="this.selectedModel === 'Lambda'" class="mb-4 ml-4 mr-4">
+  	  <v-card v-if="this.selectedModel === 'Lambda' && result.length > 0" class="mb-4 ml-4 mr-4">
   	    <v-card-text>
   		<b>AICc Score (Lambda fixed at 0):</b>
   		<br></br>
@@ -146,7 +146,7 @@
   		This AICc (AIC with a correction for small sample sizes) score is computed with lambda fixed at 0.
   	    </v-card-text>
   	  </v-card>
-  	  <v-card v-if="this.selectedModel === 'Lambda'" class="mb-4 ml-4 mr-4">
+  	  <v-card v-if="this.selectedModel === 'Lambda' && result.length > 0" class="mb-4 ml-4 mr-4">
   	    <v-card-text>
   		<b>AICc Score (Lambda Estimated):</b>
   		<br></br>
@@ -155,7 +155,7 @@
   		This AICc score is similar to the one above, except lambda is estimated.
   	    </v-card-text>
   	  </v-card>
-  	  <v-card v-if="this.selectedModel === 'Lambda'" class="mb-4 ml-4 mr-4">
+  	  <v-card v-if="this.selectedModel === 'Lambda' && result.length > 0" class="mb-4 ml-4 mr-4">
   	    <v-card-text>
   		<b>Lambda Value:</b>
   		<br></br>
@@ -165,7 +165,7 @@
   	    </v-card-text>
   	  </v-card>
 
-  	  <v-card v-if="this.selectedModel === 'K'" class="mb-4 ml-4 mr-4">
+  	  <v-card v-if="this.selectedModel === 'K' && result.length > 0" class="mb-4 ml-4 mr-4">
   	    <v-card-text>
   		<b>Blomberg's K Value:</b>
   		<br></br>
@@ -174,7 +174,7 @@
   		K is a descriptive statistic that gauges the amount of phylogenetic signal.
   	    </v-card-text>
   	  </v-card>
-  	  <v-card v-if="this.selectedModel === 'K'" class="mb-4 ml-4 mr-4">
+  	  <v-card v-if="this.selectedModel === 'K' && result.length > 0" class="mb-4 ml-4 mr-4">
   	    <v-card-text>
   		<b>Mean observed variance of PICs:</b>
   		<br></br>
@@ -183,7 +183,7 @@
   		This is the observed variance of phylogenetically independent contrasts (PICs).
   	    </v-card-text>
   	  </v-card>
-  	  <v-card v-if="this.selectedModel === 'K'" class="mb-4 ml-4 mr-4">
+  	  <v-card v-if="this.selectedModel === 'K' && result.length > 0" class="mb-4 ml-4 mr-4">
   	    <v-card-text>
   		<b>Mean random variance of PICs:</b>
   		<br></br>
@@ -192,7 +192,7 @@
   		This is the random variance of PICs obtained through the use of tip shuffling randomization.
   	    </v-card-text>
   	  </v-card>
-  	  <v-card v-if="this.selectedModel === 'K'" class="mb-4 ml-4 mr-4">
+  	  <v-card v-if="this.selectedModel === 'K' && result.length > 0" class="mb-4 ml-4 mr-4">
   	    <v-card-text>
   		<b>P value:</b>
   		<br></br>
@@ -201,7 +201,7 @@
   		This is the p value that results from testing the difference between the observed vs random variance of PICs.
   	    </v-card-text>
   	  </v-card>
-  	  <v-card v-if="this.selectedModel === 'K'" class="mb-4 ml-4 mr-4">
+  	  <v-card v-if="this.selectedModel === 'K' && result.length > 0" class="mb-4 ml-4 mr-4">
   	    <v-card-text>
   		<b>Z-score:</b>
   		<br></br>
@@ -316,8 +316,6 @@ new Vue({
           that.runCompleted = true
           // Kristen: other variables here
           that.running = false
-          that.renderTheSpec(that)
-
         },
         error: function(data){
           alert( 'Sorry.' );
