ASR bones added

--- a/index.html
+++ b/index.html
@@ -65,12 +65,6 @@
               image: '/static/fitContinuous_app.png',
             },
             {
-              name: 'Fit Discrete Variable Traits',
-              description: 'Luke to provide another pithy saying',
-              url: '/fit_discrete',
-              image: '/static/fitDiscrete_app.png',
-            },
-            {
               name: 'Phylosignal',
               description: 'Search for Phylosignal given a tree and a matrix',
               url: '/phylosignal',
@@ -87,6 +81,12 @@
               description: 'Phylogenetic Independent Contrasts',
               url: '/pic',
               image: '/static/pic_app.png',
+            },
+            {
+              name: 'Fit Discrete Variable Traits',
+              description: 'Not a priority right now',
+              url: '/fit_discrete',
+              image: '/static/fitDiscrete_app.png',
             },
           ],
         };
